# projeto_idle

./: .gitignore  README.md  index.html  package-lock.json  package.json  teste.js
docs/: GAMEPLAY_AUDIT.md  PROJECT_STATUS.md  persistence-plan.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/client-preferences/: clientPreferences.ts
src/components/action/: ActionAnalyzer.tsx  ActionPanel.tsx  ActionSummaryCard.tsx
src/data/: accesses.ts  bazaarCatalog.ts  bestiaryThresholds.ts  blessings.ts  bosses.ts  charms.ts  clientUpdates.ts  collections.ts  cosmeticExchanges.ts  craftingRecipes.ts  dailyRewards.ts  destinyNodes.ts  equipmentProgression.ts  equipmentSets.ts  guildAchievements.ts  guildCodex.ts  guildContracts.ts  guildDeploymentOrders.ts  guildDirectives.ts  guildFacilities.ts  guildLevelRewards.ts  guildLoadoutTemplates.ts  guildProgression.ts  guildProjects.ts  guildRecruitCandidates.ts  guildRenownObjectives.ts  guildSpecialists.ts  guildSquads.ts  guildTitles.ts  hunts.ts  imbuements.ts  inventoryFactory.ts  items.ts  mockCharacters.ts  mockDepot.ts  mockGuild.ts  mockLogs.ts  monsterFocus.ts  monsters.ts  questJourney.ts  (+5 more)
src/database/: db.ts  migrations.ts  saveGameRepository.ts  saveMapper.ts  schema.ts
src/game-engine/: README.md
src/game-services/: README.md  actionService.ts  bossService.ts  huntService.ts  marketService.ts  questService.ts  trainingService.ts
src/security/: README.md
src/shared/: constants.ts  time.ts  types.ts
(+341 files in other folders)
