[package]
name = "guild-hunt-idle"
version = "0.1.0"
description = "Guild Hunt Idle desktop app"
authors = ["Jhonoaru"]
edition = "2021"

[lib]
name = "guild_hunt_idle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
